--- a/BlogHost.Domain/App.config
+++ b/BlogHost.Domain/App.config
@@ -10,4 +10,7 @@
       <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
     </providers>
   </entityFramework>
+  <connectionStrings>
+    <add name="BlogContext" connectionString="data source=(LocalDB)\MSSQLLocalDB;attachdbfilename=..\BlogHost.WebUI\App_Data\BlogDB.mdf;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
+  </connectionStrings>
 </configuration>
