--- a/BlogHost.Domain/BlogHost.Domain.csproj
+++ b/BlogHost.Domain/BlogHost.Domain.csproj
@@ -58,10 +58,12 @@
     <Compile Include="Abstract\IBlogRepository.cs" />
     <Compile Include="Abstract\IPostRepository.cs" />
     <Compile Include="Abstract\IRoleRepository.cs" />
+    <Compile Include="Abstract\ITagRepository.cs" />
     <Compile Include="Abstract\IUserRepository.cs" />
     <Compile Include="Concrete\EFBlogRepository.cs" />
     <Compile Include="Concrete\EFPostRepository.cs" />
     <Compile Include="Concrete\EFRoleRepository.cs" />
+    <Compile Include="Concrete\EFTagRepository.cs" />
     <Compile Include="Concrete\EFUserRepository.cs" />
     <Compile Include="Entities\Blog.cs" />
     <Compile Include="Concrete\BlogContext.cs" />
