--- a/BlogHost.Web/BlogHost.Web.csproj
+++ b/BlogHost.Web/BlogHost.Web.csproj
@@ -133,7 +133,9 @@
     <Compile Include="App_Start\FilterConfig.cs" />
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="Controllers\AccountController.cs" />
+    <Compile Include="Controllers\AdminController.cs" />
     <Compile Include="Controllers\BlogController.cs" />
+    <Compile Include="Controllers\CommentController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\PostController.cs" />
     <Compile Include="Controllers\TagController.cs" />
@@ -208,6 +210,12 @@
     <Content Include="Views\Post\InBlog.cshtml" />
     <Content Include="Views\Shared\_Search.cshtml" />
     <Content Include="Views\Tag\Search.cshtml" />
+    <Content Include="Views\Admin\Index.cshtml" />
+    <Content Include="Views\Admin\Posts.cshtml" />
+    <Content Include="Views\Admin\EditPost.cshtml" />
+    <Content Include="Views\Blog\Create.cshtml" />
+    <Content Include="Views\Post\Create.cshtml" />
+    <Content Include="Views\Comment\Add.cshtml" />
   </ItemGroup>
   <ItemGroup />
   <ItemGroup>
