--- a/BlogHost.Web/Web.config
+++ b/BlogHost.Web/Web.config
@@ -19,7 +19,10 @@
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
   </appSettings>
   <system.web>
-    <compilation debug="true" targetFramework="4.5.2" />
+    <customErrors mode="On" defaultRedirect="~/Error/Index">
+      <error statusCode="404" redirect="~/Error/NotFound" />
+    </customErrors>
+    <compilation debug="false" targetFramework="4.5.2" />
     <httpRuntime targetFramework="4.5.2" />
     <authentication mode="Forms">
       <forms name="cookies" timeout="2880" loginUrl="~/Account/Login" />
@@ -47,6 +50,13 @@
       </providers>
     </roleManager>
   </system.web>
+  <system.webServer>
+    <httpErrors errorMode="Custom" existingResponse="Replace">
+      <clear/>
+      <error statusCode="404" path="/Error/NotFound" responseMode="ExecuteURL"/>
+      <error statusCode="403" path="/Error/Forbidden" responseMode="ExecuteURL"/>
+    </httpErrors>
+  </system.webServer>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
       <dependentAssembly>
