--- a/BlogHost.Web/Web.config
+++ b/BlogHost.Web/Web.config
@@ -22,7 +22,7 @@
     <customErrors mode="On" defaultRedirect="~/Error/Index">
       <error statusCode="404" redirect="~/Error/NotFound" />
     </customErrors>
-    <compilation debug="false" targetFramework="4.5.2" />
+    <compilation debug="true" targetFramework="4.5.2" />
     <httpRuntime targetFramework="4.5.2" />
     <authentication mode="Forms">
       <forms name="cookies" timeout="2880" loginUrl="~/Account/Login" />
